test/ui/test/lowering/module-headers/not-the-first-declaration.lushui
data Void: Type of

;; What is this?
module

